--- a/evaluation/eval_result.ipynb
+++ b/evaluation/eval_result.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "import json \n",
     "import pandas as pd\n",
-    "DIR1 = \"/home/zichao/catkin_ws/src/BARNSubmission/result/run1_vor/\"\n",
-    "DIR2 = \"/home/zichao/catkin_ws/src/BARNSubmission/result/run2_vor/\"\n",
+    "DIR1 = \"/home/alienwareamrl/Research/BARN_CHALLENGE_2023/result/run_1/\"\n",
+    "# DIR2 = \"/home/zichao/catkin_ws/src/BARNSubmission/result/run2_vor/\"\n",
     "\n"
    ]
   },
